<resources>
    <string name="app_name">Red Rider</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_post">PostActivity</string>
    <string name="title_activity_match">MatchActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="navigation_view_header_title">Profile Picture</string>
    <string name="list_title">Posts</string>
    <string name="dest_hint">Destination</string>
    <string name="date_hint">Date</string>
    <string name="post_text">New Post</string>
    <string name="driver">Driver</string>
    <string name="rider">Rider</string>
    <string name="compensation">Compensation</string>
    <string name="numSeats">Seats Available</string>
    <string name="sex_prompt">Select a sex</string>
    <string-array name="sex_array">
        <item>male</item>
        <item>female</item>
    </string-array>

</resources>
