<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
    android:id="@+id/dest"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/dest_hint"
    android:inputType="text"
    />

    <!--//String dest, String date, String driverId, String seats, String time, String vehicle-->

    <EditText
    android:id="@+id/date"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/date_hint"
    android:inputType="text"
   />

    <EditText
        android:id="@+id/seats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/compensation"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/compensation"
        android:inputType="text"
        />


    <EditText
        android:id="@+id/vehicle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/numSeats"
        android:inputType="text"
        />



</LinearLayout>
