<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="top"
           >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="@string/post_text"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                >

                <Button
                    android:id="@+id/rider"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rider"/>
                <Button
                    android:id="@+id/driver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/driver"/>
            </LinearLayout>


            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="horizontal">-->
                <!--<ToggleButton-->
                    <!--android:id="@+id/driver"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_weight="1"-->
                    <!--android:text="@string/driver" />-->

                <!--<ToggleButton-->
                    <!--android:id="@+id/rider"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_weight="1"-->
                    <!--android:checked="false"-->
                    <!--android:text="@string/rider" />-->
            <!--</LinearLayout>-->



            <include
                layout="@layout/input_rider"
                android:id="@+id/includedLayout"
                android:visibility="gone"
                />

            <include
                layout="@layout/input_driver"
                android:id="@+id/includedLayout2"
                android:visibility="gone"
                />


            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Submit"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"
                />

            <TextView
                android:id="@+id/driversuccess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="driver post success"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/ridersuccess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="rider post success"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"/>

        </LinearLayout>




</ScrollView>


<!--<LinearLayout-->
<!--android:id="@+id/linearLayout"-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="wrap_content"-->
<!--app:layout_constraintBottom_toBottomOf="parent"-->
<!--app:layout_constraintDimensionRatio="w,1:1"-->
<!--app:layout_constraintEnd_toEndOf="parent"-->
<!--app:layout_constraintStart_toStartOf="parent"-->
<!--app:layout_constraintTop_toTopOf="parent">-->

<!--<ToggleButton-->
    <!--android:id="@+id/driver"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_weight="1"-->
    <!--android:text="@string/driver" />-->

<!--<ToggleButton-->
    <!--android:id="@+id/rider"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_weight="1"-->
    <!--android:checked="false"-->
    <!--android:text="@string/rider" />-->
<!--</LinearLayout>-->


<!--<TextView-->
<!--android:id="@+id/textView"-->
<!--android:layout_width="wrap_content"-->
<!--android:layout_height="wrap_content"-->
<!--android:layout_marginStart="163dp"-->
<!--android:layout_marginTop="16dp"-->
<!--android:layout_marginEnd="163dp"-->
<!--android:layout_marginBottom="24dp"-->
<!--android:fontFamily="monospace"-->
<!--android:text="@string/post_text"-->
<!--android:textAlignment="center"-->
<!--android:textColor="@android:color/black"-->
<!--android:textSize="30sp"-->
<!--app:layout_constraintBottom_toTopOf="@+id/editText3"-->
<!--app:layout_constraintEnd_toEndOf="parent"-->
<!--app:layout_constraintStart_toStartOf="parent"-->
<!--app:layout_constraintTop_toTopOf="parent" />-->


<!--<EditText-->
<!--android:id="@+id/editText3"-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="wrap_content"-->
<!--android:layout_marginTop="16dp"-->
<!--android:layout_marginBottom="16dp"-->
<!--android:hint="@string/dest_hint"-->
<!--android:inputType="text"-->
<!--app:layout_constraintBottom_toTopOf="@+id/editText2"-->
<!--app:layout_constraintEnd_toEndOf="parent"-->
<!--app:layout_constraintStart_toStartOf="parent"-->
<!--app:layout_constraintTop_toBottomOf="@+id/textView"-->
<!--app:layout_constraintVertical_bias="0.0" />-->


<!--<EditText-->
<!--android:id="@+id/editText2"-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="wrap_content"-->
<!--android:layout_marginTop="16dp"-->
<!--android:layout_marginBottom="16dp"-->
<!--android:hint="@string/date_hint"-->
<!--android:inputType="text"-->
<!--app:layout_constraintBottom_toBottomOf="parent"-->
<!--app:layout_constraintEnd_toEndOf="parent"-->
<!--app:layout_constraintHorizontal_bias="0.0"-->
<!--app:layout_constraintStart_toStartOf="parent"-->
<!--app:layout_constraintTop_toBottomOf="@+id/editText3" />-->

<!--<TextView-->
<!--android:id="@+id/textView"-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="wrap_content"-->
<!--android:text="TextView" />-->

<!--<EditText-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="wrap_content"-->
<!--android:hint="@string/title_hint" />-->

<!--<EditText-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="wrap_content"-->
<!--android:hint="@string/title_hint" />-->

<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="match_parent">-->

<!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="vertical"-->
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin">-->

    <!--<EditText-->
        <!--android:id="@+id/add_task_title"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:hint="@string/title_hint"-->
        <!--android:maxLines="1"-->
        <!--android:textAppearance="@style/TextAppearance.AppCompat.Title" />-->

    <!--<EditText-->
        <!--android:id="@+id/add_task_description"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="350dp"-->
        <!--android:gravity="top"-->
        <!--android:hint="@string/description_hint" />-->
<!--</ScrollView>-->

    <!--</LinearLayout>-->
